# slipway

./: .gitignore  .prettierignore  Cargo.toml  NOTICE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/slipway-core/: Cargo.toml
crates/slipway-core/src/: derive.rs  error.rs  import.rs  lib.rs  map.rs  model.rs  schema.rs  store.rs
crates/slipway-core/tests/: map_seed.rs  seed_graph.rs
docs/: data-model.md  resurfacing-scheduler.md
docs/design/: README.md
docs/design/project/: .thumbnail  Slipway Directions.dc.html  Slipway Prototype.dc.html  Slipway Sidebar.dc.html
e2e/: happy-path.e2e.ts  wdio.conf.ts
scripts/: extract-seed.mjs
seed/: launch-graph.json
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/board/: Board.test.tsx  Board.tsx  FocusCard.tsx  Lane.tsx  WaitingCard.tsx  board.css
src/components/chrome/: AppShell.tsx  Footer.test.tsx  Footer.tsx  Titlebar.test.tsx  Titlebar.tsx  chrome.css
src/components/drawer/: Drawer.test.tsx  Drawer.tsx  drawer.css
src/components/intake/: DragOverlay.tsx  IntakeOverlay.test.tsx  IntakeOverlay.tsx  intake.css
src/components/ledger/: LedgerOverlay.test.tsx  LedgerOverlay.tsx  ledger.css
src/components/map/: MapOverlay.test.tsx  MapOverlay.tsx  map.css
src/components/recheck/: RecheckCard.test.tsx  RecheckCard.tsx  recheck.css
src/lib/: keys.test.ts  keys.ts  settings.test.tsx  settings.tsx
src/lib/board/: present.test.ts  present.ts  useBoard.test.ts  useBoard.ts
src/lib/intake/: atlas.test.ts  atlas.ts  payload.test.ts  payload.ts  useWindowDrop.ts
src/lib/ipc/: commands.ts  types.ts
src/styles/: global.css  tokens.css
