[workspace]
resolver = "2"
members = ["crates/slipway-core", "src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fieldstatenz/slipway"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
thiserror = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
