[package]
name = "slipway"
description = "The externalized mental model — a dependency-aware task board where every task carries a learn-loop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "slipway_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
slipway-core = { path = "../crates/slipway-core" }
