[package]
name = "slipway"
description = "The externalized mental model — a dependency-aware task board where every task carries a learn-loop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "slipway_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
slipway-core = { path = "../crates/slipway-core" }

# Desktop-only quality-of-life plugins (issue #9): second launch focuses the
# existing window, window position survives restarts, launch-at-login toggle.
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"
